terraform/environments/staging/platform/jenkins/config-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: spring-petclinic-app
  labels:
    app: config-server
spec:
  type: ClusterIP
  selector:
    app: config-server
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
