terraform/environments/staging/platform/jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  selector:
    app: jenkins-server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
